projects/compiler/test/typechecker/import/error_alias_questiondot_access.out
Error at %FILE_NAME%:3:10
Unnecessary use of '?.' operator
  |  val _ = a?.add(1, 2)
              ^
(The lhs value's type here is known to be a non-Option type)
